# acronyms

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  acronyms.csv  check-spelling.sh  check_acronyms.py  clean.sh  install-spelling-tools.sh  output.csv  print-dupe-acronyms.sh  print-dupe-definitions.sh  pyproject.toml  pytest.ini  va.dic
.bundle/: config
.github/workflows/: acronym-ci.yml  codeql-analysis.yml  script-ci.yml
format_acronyms/: format_acronyms.py
scripts/: check-acronyms.py  check-spelling.sh  clean.sh  dev-requirements.in  dev-requirements.txt  format_acronyms.py  install-spelling-tools.sh  print-dupe-acronyms.sh  print-dupe-definitions.sh  requirements.in  requirements.txt  va.dic  wtf.sh
scripts/tests/: test_format_acronyms.py
tests/: test_format_acronyms.py
